Salesforce/force-app/main/default/objects/Field_History__c/Field_History__c.object-meta.xml
<CustomObject>
    <description>A custom field history object that can be used to record the values of long text and rich text field which is presently not supported by the standard history object (https://help.salesforce.com/articleView?id=field_audit_trail.htm&amp;type=0).
Please note that an object should either use the standard field history (preferred) or this custom Field History based on requirements.  No object should use both,</description>
    <label>Field History</label>
    <nameField>
        <displayFormat>FH-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>