Salesforce/force-app/main/default/objects/Field_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The time and date of the field update.  This exists as the created date will occur after the actual change due to the usage of a platform event.</description>
    <inlineHelpText>The time and date of the field update.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>