Salesforce/force-app/main/default/objects/Field_History__c/fields/Dependent_Picklist_Set__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Picklist_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The updated Dependent Picklist Set.</description>
    <inlineHelpText>The updated Dependent Picklist Set.</inlineHelpText>
    <label>Dependent Picklist Set</label>
    <referenceTo>Dependent_Picklist_Set__c</referenceTo>
    <relationshipLabel>Field History</relationshipLabel>
    <relationshipName>Field_History</relationshipName>
    <type>Lookup</type>
</CustomField>