Salesforce/force-app/main/default/objects/Field_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The field to which this field history record relates.</description>
    <inlineHelpText>The field to which this field history record relates.</inlineHelpText>
    <label>Field</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>