Salesforce/force-app/main/default/objects/Field_History__c/fields/Licence_Type_Class_Grade__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type_Class_Grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The updated Licence Type/Class/Grade record.</description>
    <inlineHelpText>The updated Licence Type/Class/Grade record.</inlineHelpText>
    <label>Licence Type-Class-Grade</label>
    <referenceTo>Licence_Type_Class_Grade__c</referenceTo>
    <relationshipLabel>Field History</relationshipLabel>
    <relationshipName>Field_History</relationshipName>
    <type>Lookup</type>
</CustomField>