Salesforce/force-app/main/default/objects/Field_History__c/fields/New_List_Value__c.field-meta.xml
<CustomField>
    <fullName>New_List_Value__c</fullName>
    <description>The new field value abbreviated to no more than 255 characters for list view display.</description>
    <inlineHelpText>The new field value.</inlineHelpText>
    <label>New Value</label>
    <length>256</length>
    <type>Html</type>
</CustomField>