Salesforce/force-app/main/default/objects/Field_History__c/fields/New_Long_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Long_Value__c</fullName>
    <description>The new value.</description>
    <inlineHelpText>The new value.</inlineHelpText>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>