Salesforce/force-app/main/default/objects/Field_History__c/fields/New_Rich_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Rich_Text_Value__c</fullName>
    <description>The new field value as rich text for detail page display.</description>
    <inlineHelpText>The new field value.</inlineHelpText>
    <label>New Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>