Salesforce/force-app/main/default/objects/Field_History__c/fields/New_Short_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Short_Value__c</fullName>
    <description>The new value.</description>
    <inlineHelpText>The new value.</inlineHelpText>
    <label>New Short Value</label>
    <type>TextArea</type>
</CustomField>