Salesforce/force-app/main/default/objects/Field_History__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>The object to which this field history record relates.</description>
    <inlineHelpText>The object to which this field history record relates.</inlineHelpText>
    <label>Object Name</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>