Salesforce/force-app/main/default/objects/Field_History__c/fields/Old_List_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_List_Value__c</fullName>
    <description>The original field value abbreviated to no more than 255 characters for list view display.</description>
    <inlineHelpText>The original field value.</inlineHelpText>
    <label>Original Value</label>
    <length>256</length>
    <type>Html</type>
</CustomField>