Salesforce/force-app/main/default/objects/Field_History__c/fields/Old_Long_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Long_Value__c</fullName>
    <description>The old value.</description>
    <inlineHelpText>The old value.</inlineHelpText>
    <label>Original Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>