Salesforce/force-app/main/default/objects/Field_History__c/fields/Old_Rich_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Rich_Text_Value__c</fullName>
    <description>The original value as rich text for detail page display.</description>
    <inlineHelpText>The original field value.</inlineHelpText>
    <label>Original Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>