Salesforce/force-app/main/default/objects/Field_History__c/fields/Old_Short_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Short_Value__c</fullName>
    <description>The old field value.</description>
    <inlineHelpText>The old field value.</inlineHelpText>
    <label>Old Short Value</label>
    <type>TextArea</type>
</CustomField>