Salesforce/force-app/main/default/objects/Field_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that initiated the field update.  The created by cannot be used here as these records are created via a platform event.</description>
    <inlineHelpText>The user that initiated the field update.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>